  been moved to a new method ParserOptions::setIsMessage(). (T393601, T395589)
* The ParserOutput constructor now enforces strict type hints on its arguments.
  Passing null as the $languageLinks parameter was deprecated in 1.43.
* ParserOutput::addTemplate() now throws an InvalidArgumentException if an
  interwiki link is provided; this was deprecated in 1.42.
* The following methods in ParserOutput have been removed:
  - ::getTimeSinceStart(), deprecated in 1.42
  - ::__get()/::__set(), deprecated in 1.38
    Dynamic properties continue to emit warnings in PHP >= 8.2.
* …

=== Deprecations in 1.45 ===

* UserNameUtils::getTempPlaceholder() has been deprecated and now emits
  deprecation warnings. Use TempUserConfig::getPlaceholderName() instead.
* MediaWikiServices::disableStorageBackend(), deprecated in 1.40 now
  emits deprecation warnings. Use ::disableStorage() instead.
* MediaWikiServices::getConfiguredReadOnlyMode(), deprecated in 1.41 now
  emits deprecation warnings. Use ::getReadOnlyMode() service together
  with ::getConfiguredReason() and ::isConfiguredReadOnly() to check
  when a site is set to read-only mode.
* OutputPage::wrapWikiTextAsInterface() has been deprecated.
* Passing a string or UserIdentity object to DatabaseBlock::setTarget() or
  the 'address' parameter to DatabaseBlock::__construct() is now deprecated
  and will emit deprecation warnings. Use BlockTargetFactory to obtain a
  BlockTarget to pass to the 'target' parameter of these functions, or use
  DatabaseBlockStore::newUnsaved() or ::insertBlockWithParams(). (T385966)
* Calling ApiOptions::__construct() without $userOptionsManager and
  $preferencesFactory has been deprecated and emits deprecation warnings.
  Code that extends ApiOptions should instead extend ApiOptionsBase.
* Calling RevisionStore methods with a LinkTarget emits deprecation warnings
  now. It was already documented as deprecated since 1.36.
  - RevisionStore::getFirstRevision