@@ -150,6 +150,8 @@ because of Phabricator reports.
   Passing null as the $languageLinks parameter was deprecated in 1.43.
 * ParserOutput::addTemplate() now throws an InvalidArgumentException if an
   interwiki link is provided; this was deprecated in 1.42.
+* ParserOutput::setPageProperty() now enforces a strict type hint of 'string'
+  on its $value parameter; non-string values were deprecated in 1.42.
 * The following methods in ParserOutput have been removed:
   - ::getTimeSinceStart(), deprecated in 1.42
   - ::__get()/::__set(), deprecated in 1.38
